# Bulter

./: .gitignore  README.md
doc/code-quality/: code_review_report.md  code_review_report_2.md  flutter_analyze.txt  ui_vs_prototype_review.md
doc/first/: 01-architecture.md  02-requirements.md  03-tech.md  04-platform.md  plan.md
doc/git_log/: commit_1.md  commit_10.md  commit_11.md  commit_12.md  commit_14.md  commit_15.md  commit_16.md  commit_17.md  commit_18.md  commit_19.md  commit_2.md  commit_20.md  commit_21.md  commit_3.md  commit_4.md  commit_5.md  commit_6.md  commit_7.md  commit_8.md  commit_9.md
src/: .gitignore  README.md  pubspec.yaml
src/android/app/: build.gradle.kts
src/ios/Runner/: Info.plist
src/ios/Runner.xcodeproj/: project.pbxproj
src/lib/: app_bootstrap.dart  main.dart
src/lib/ai/: ai_service.dart  model_registry.dart  scene_inference.dart
src/lib/components/: ai_insight_card.dart  bottom_tab.dart  bulter_scaffold.dart  capule_switcher.dart  empty_state.dart  fab_chat.dart  mastery_ring.dart  module_card.dart  svg_icon.dart  timeline.dart
src/lib/db/: backup.dart  (+4 more)
src/plugins/bulter_sqlite_vec/linux/: CMakeLists.txt  bulter_sqlite_vec_plugin.cc
src/plugins/bulter_sqlite_vec/src/: CMakeLists.txt  sqlite-vec.h
src/test/: dao_crud_test.dart  data_export_test.dart  db_migration_test.dart  hive_test.dart  module_registry_test.dart  step11_chat_enhance_test.dart  step12_csv_import_test.dart  step13_module_enhance_test.dart  step13b_visualization_test.dart  ui_polish_test.dart  widget_test.dart
src/web/: index.html  manifest.json
(+145 files in other folders)
